add bibtex, arxiv link

--- a/index.html
+++ b/index.html
@@ -97,6 +97,15 @@
                     <span>Supplementary</span>
                   </a>
                 </span>
+                <span class="link-block">
+                  <a href="https://arxiv.org/abs/2405.14847"
+                     class="external-link button is-normal is-rounded is-dark">
+                    <span class="icon">
+                        <i class="ai ai-arxiv"></i>
+                    </span>
+                    <span>arXiv</span>
+                  </a>
+                </span>
                 <!-- Code Link. -->
                 <span class="link-block">
                   <a href="https://github.com/lwwu2/nde"
@@ -319,6 +328,21 @@
         <p style="text-align: center;">
           NDE supports removal of objects and their reflections from the scene.
         </p>
+  </section>
+
+
+  <section class="section" id="BibTeX">
+    <div class="container is-max-desktop content">
+      <h2 class="title">BibTeX</h2>
+      <pre><code>
+@inproceedings{wu2024neural,
+  author = {Liwen Wu and Sai Bi and Zexiang Xu and Fujun Luan and Kai Zhang and Iliyan Georgiev and Kalyan Sunkavalli and Ravi Ramamoorthi},
+  title = {Neural Directional Encoding for Efficient and Accurate View-Dependent Appearance Modeling},
+  booktitle = {CVPR},
+  year = {2024}
+}
+  </code></pre>
+    </div>
   </section>
 
 
